Updated for winning

--- a/css/roadwatch.css
+++ b/css/roadwatch.css
@@ -40,13 +40,14 @@ h1 {
   font-size: 30px;
 }
 
-#video-btn {
+/*#video-btn {
   width: 250px;
   height: 60px;
   font-size: 30px;
   font-weight: 300;
 }
-
-.votepls {
+*/
+/*.votepls {
   font-weight: 400;
 }
+*/
